--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "piety",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Piety is a text base strategy game.",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/Peity/Peity#readme",
   "dependencies": {
     "@prisma/client": "^3.9.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
