--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.13",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "slugify": "^1.6.5"
   }
 }
