--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
   "name": "piety",
   "version": "1.0.0",
-  "description": "A text base online strategy game.",
-  "main": "app.ts",
+  "description": "A text base web game.",
+  "main": "boot.ts",
   "scripts": {
-    "dev": "nodemon app.ts"
+    "dev": "nodemon boot.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Peity/Peity.git"
+    "url": "piety"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "node",
+    "express",
+    "typescript"
+  ],
+  "author": "MrSha1",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Peity/Peity/issues"
-  },
-  "homepage": "https://github.com/Peity/Peity#readme",
   "devDependencies": {
-    "@types/node": "^17.0.17",
-    "prisma": "^3.9.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.19",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@prisma/client": "^3.9.2",
-    "@types/express": "^4.17.13",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.1",
-    "express": "^4.17.2",
-    "express-validator": "^6.14.0",
-    "slugify": "^1.6.5"
+    "@types/mongoose": "^5.11.97",
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.3"
   }
 }
